make extraClasspath and watchResources work on java11 and java17
Signed-off-by: Ian Luo <ian.luo@gmail.com>